--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,9 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+  <script src="https://code.jquery.com/jquery-3.2.1.js" 
+integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" 
+crossorigin="anonymous"></script>
 </head>
 
 <body>
