--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <style>
-      @font-face {
+      /* @font-face {
         font-family: "HoonWhitecatR";
         src: local("HoonWhitecatR") format("truetype");
         font-weight: normal;
@@ -20,7 +20,7 @@
 
       div {
         font-family: "HoonWhitecatR";
-      }
+      } */
     </style>
   </head>
   <body>
