--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,9 @@ crossorigin="anonymous"></script>
 <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 <script src="https://kit.fontawesome.com/b9567f0dbc.js" crossorigin="anonymous"></script>
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet"> -->
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet"> -->
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.plyr.io/3.6.2/plyr.css" />
@@ -22,7 +24,9 @@ crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/b9567f0dbc.js" crossorigin="anonymous"></script>
   <style>
     #app {
-      font-family: 'Nanum Gothic', sans-serif;
+      /* font-family: 'Nanum Gothic', sans-serif; */
+      /* font-family: 'Noto Sans KR', sans-serif; */
+      font-family: 'Poor Story', cursive;
     }
 
   </style>
